# py-boilerplate

./: Makefile  README.md  env.example  pyproject.toml
app/: main.py
app/core/: __init__.py
app/core/v1/example/: __init__.py
app/core/v1/example/model/: example.py
app/core/v1/example/repository/: __init__.py  example_repository.py
app/core/v1/example/repository/dao/: example.py
app/core/v1/example/repository/interface/: __init__.py  repository_interface.py
app/core/v1/example/usecase/: __init__.py  example_usecase.py
app/core/v1/example/usecase/interface/: __init__.py  usecase_interface.py
app/core/v1/faces/model/: faces.py
app/core/v1/faces/repository/interface/: repository_interface.py
app/core/v1/health/: __init__.py
app/core/v1/health/model/: health.py
app/core/v1/health/repository/: __init__.py  health_repository.py
app/core/v1/health/repository/interface/: __init__.py  repository_interface.py
app/core/v1/health/usecase/: __init__.py  health_usecase.py
app/core/v1/health/usecase/interface/: __init__.py  usecase_interface.py
app/handler/http_route/v1/example/: __init__.py  exampel_handler.py
app/handler/http_route/v1/health/: __init__.py  health_handler.py
app/handler/http_route/v1/middleware/: __init__.py  middleware.py
app/infrastructure/db/: db.py
